Fixed bug on click btn (break in animations), fixe console bug and size mobile

--- a/Styles/variables.css
+++ b/Styles/variables.css
@@ -70,7 +70,7 @@ p {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: auto;
+    height: 100%;
     background: linear-gradient(180deg, var(--text) 0%, var(--sm-smooth) 50%, var(--text) 100%);
     overflow: hidden;
     position: relative;
@@ -90,15 +90,17 @@ p {
     border-radius: 50%;
     border: 4px solid transparent;
     border-right-color: #fff;
+    overflow: hidden;
+    position: fixed; /* Nao interferir no layout da page */
 }
  
  /* Animação dos Circulos internos */
- @keyframes moveUp {
+ @keyframes moveDown {
     from {
-        top: 0;
+        top: -2vh;
     }
     to {
-        bottom: 0;
+        top: 100%;
     }
  }
  
